// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search page Matches snapshot 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      name="search"
      onChange={[Function]}
      type="text"
      value=""
    />
    <button
      type="submit"
    >
      Search
    </button>
  </form>
</div>
`;

exports[`Search page Matches snapshot with given query 1`] = `
<div>
  <form
    onSubmit={[Function]}
  >
    <input
      name="search"
      onChange={[Function]}
      type="text"
      value="afar-breidr"
    />
    <button
      type="submit"
    >
      Search
    </button>
  </form>
  <a
    href="/word/afar-breidr"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <p>
      afar-breiðr
    </p>
  </a>
</div>
`;
